--- a/images/place-kitty.css
+++ b/images/place-kitty.css
@@ -1,6 +1,5 @@
-
 /* Select the image with a class of kitty-1 */
-img.kitty-1 {
+images/kitty-1.png{
   position: absolute;
   z-index: 1;
   top: 276px;
@@ -8,7 +7,7 @@ img.kitty-1 {
 }
 
 /* Select the image with id of kitty-2 **/
-#kitty-2 {
+images/kitty-2.png{
   position: absolute;
   z-index: 2;
   top: 212px;
@@ -16,7 +15,7 @@ img.kitty-1 {
 }
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
-#basket img {
+images/kitty-3.png{
   position: absolute;
   z-index: 3;
   top: 291px;
@@ -24,7 +23,7 @@ img.kitty-1 {
 }
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
-#ball + img {
+images/kitty-4.png{
   position: absolute;
   z-index: 4;
   top: 260px;
@@ -32,12 +31,9 @@ img.kitty-1 {
 }
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
-img[alt="Kitty 5"] {
+images/kitty-5.png{
   position: absolute;
   z-index: 3;
   top: 217px;
   left: 223px;
 }
-
-
-
